--- a/css/titoli.css
+++ b/css/titoli.css
@@ -1,12 +1,10 @@
-*
-{
+* {
     margin: 0;
     padding: 0;
     font-family: Arial, Helvetica, sans-serif;
 }
 
-.nav
-{
+.nav {
     height: 7vh;
     width: 100vw;
     background: #00BECD;
@@ -19,8 +17,7 @@
     transform: translate(-50%, -50%);
 }
 
-.back
-{
+.back {
     color: white;
     font-size: 40px;
     text-decoration: none;
@@ -30,13 +27,11 @@
     justify-content: center;
 }
 
-.spazio
-{
+.spazio {
     width: 20%;
 }
 
-.sottonav
-{
+.sottonav {
     background: #a100ad;
     color: white;
     height: 3vh;
@@ -51,18 +46,17 @@
     transform: translate(-50%, -50%);
 }
 
-.biglietti
-{
+.biglietti {
+    background: transparent;
     position: absolute;
-    top: 60%;
+    top:10vh;
     left: 50%;
-    height: 80vh;
+    height: 10vh;
     width: 100vw;
-    transform: translate(-50%, -50%);
+    transform: translateX(-50%);
 }
 
-.biglietto-nuovo
-{
+.biglietto-nuovo {
     height: 10vh;
     width: 100vw;
     display: flex;
@@ -71,14 +65,12 @@
     border-bottom: 2px solid grey;
 }
 
-.foto
-{
+.foto {
     width: 15%;
     height: 100%;
 }
 
-.testo
-{
+.testo {
     margin-left: 5%;
     width: 85%;
     height: 100%;
@@ -90,8 +82,7 @@
     line-height: 10px;
 }
 
-.biglietto-usato
-{
+.biglietto-usato {
     height: 10vh;
     width: 100vw;
     display: flex;
@@ -100,20 +91,18 @@
     border-bottom: 2px solid grey;
 }
 
-.usato-cestino
-{
+.usato-cestino {
     width: 15%;
     height: 100%;
     background: rgb(147, 0, 0);
 }
 
-.aggiungi
-{
+.aggiungi {
     position: absolute;
     top: 95%;
     left: 50%;
     transform: translate(-50%, -50%);
-    padding:3%;
+    padding: 3%;
     font-size: 15px;
     border-radius: 70px;
     border: solid 3px #00BECD;
@@ -122,25 +111,43 @@
     background: white;
 }
 
-a
-{
+a {
     color: black;
     text-decoration: none;
 }
 
-.video
-{
+.video {
     width: 100vw;
     height: 100vh;
     position: absolute;
     left: 50%;
-    top: 50%;
-    transform: translate(-50%, -50%); 
+    top: 53%;
+    z-index: 1;
+    background: url(./img/foto.png);
+    background-repeat: no-repeat;
+    background-size: contain;
+    transform: translate(-50%, -50%);
     display: none;
 }
 
-video
-{
+video {
     width: 100vw;
     height: 100vh;
+}
+
+.attivazione{
+    position: absolute;
+    top: 73%;
+    left: 2%;
+    font-size: 25px;
+    color: black;
+    z-index: 3;
+}
+
+.emissione{
+    position: absolute;
+    top: 87%;
+    left: 2%;
+    font-size: 18px;
+    color: black;
 }
